<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom|withText"></item>

    <item
        android:id="@+id/menu_item_share"
        android:title="@string/share_button"
        android:icon="@drawable/ic_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/save_recipe"
        android:title="@string/save_recipe"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom|withText"></item>

    <item
        android:id="@+id/remove_recipe"
        android:title="@string/remove_recipe"
        android:icon="@drawable/ic_remove"
        app:showAsAction="ifRoom|withText"></item>

    <item
        android:id="@+id/search_recipe"
        android:title="@string/search_recipe"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|withText"></item>

    <item
        android:id="@+id/delete_recipe"
        android:title="@string/delete_recipe"
        android:icon="@drawable/ic_remove"
        app:showAsAction="ifRoom|withText"></item>

</menu>