<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vegetables"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/transparentImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_white" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="155dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        app:srcCompat="@drawable/playstore_icon" />

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_below="@+id/imageView"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/username"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="410dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/login_btn"
        android:layout_below="@+id/password"/>

    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="480dp"
        android:text="@string/register_link"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:layout_below="@+id/login_btn"/>

    <TextView
        android:id="@+id/photo_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="15dp"
        android:text="@string/photo_credit"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="214dp"
        android:fontFamily="@font/dancing_script_bold"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"/>

</RelativeLayout>