<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vegetables_1"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/transparentImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#22FFFFFF" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="155dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/petter_rabbit" />

    <EditText
        android:id="@+id/username_reg"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_below="@+id/imageView"/>

    <EditText
        android:id="@+id/password_reg"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/username_reg"/>

    <EditText
        android:id="@+id/password_confirm"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="340dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:layout_below="@+id/password_reg"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="410dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/register_btn"
        android:layout_below="@+id/password_confirm"/>

    <TextView
        android:id="@+id/photo_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="15dp"
        android:text="@string/photo_credit"
        android:textSize="10dp" />

</RelativeLayout>