<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchRecipeActivity"
    android:background="@color/white">

    <AutoCompleteTextView
        android:id="@+id/autoIngredientName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/ingredient_name"
        android:textColor="@color/light_gray"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/recipe_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoIngredientName">

        <CheckBox
            android:id="@+id/meal_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal_type"
            android:textColor="@color/darker_gray" />

        <CheckBox
            android:id="@+id/dessert_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dessert_type"
            android:textColor="@color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/table_scroll"
        android:layout_width="306dp"
        android:layout_height="320dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_type">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:fillViewport="true"
            android:scrollbarStyle="outsideInset"
            android:scrollbars="vertical">

            <TableLayout
                android:id="@+id/table_of_ingredients"
                android:layout_width="300dp"
                android:layout_height="wrap_content"></TableLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_scroll">

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:background="@color/btn_light"
            android:text="@string/clear_button"
            android:textColor="@color/btn" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btn"
            android:text="@string/search_button"
            android:textColor="@color/white" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>